changed custom home assistant container network from bridged to host. Helps with some integrations

--- a/roles/portainer_stacks/templates/homeassistant.yml
+++ b/roles/portainer_stacks/templates/homeassistant.yml
@@ -9,12 +9,4 @@ services:
     restart: unless-stopped
     ports:
       - "8123:8123"
-    networks:
-      - homie_homeassistant_network
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
-
-networks:
-  homie_homeassistant_network:
-    driver: bridge
+    network_mode: host
