renamed ssh key

--- a/run.yml
+++ b/run.yml
@@ -8,7 +8,7 @@
 
     - role: ssh_prepare
       vars:
-        ssh_prepare_pub_key_location: "{{ lookup('env','HOME')}}/.ssh/id_ed25519.pub"
+        ssh_prepare_pub_key_location: "{{ lookup('env','HOME')}}/.ssh/id_maintainer.pub"
 
     - role: docker
 
