--- a/roles/portainer_stacks/tasks/main.yml
+++ b/roles/portainer_stacks/tasks/main.yml
@@ -15,3 +15,8 @@
       file: homeassistant.yml
       dirs:
         - config
+
+    - name: pihole
+      file: pihole.yml
+      dirs:
+        - dnsmasq
