refactored porainer stack usage. Each stack resides in own role and uses portainer_stack role as a library. Added mosquitto mqtt broker as stack.

--- a/roles/homeassistant_stack/templates/homeassistant.yml
+++ b/roles/homeassistant_stack/templates/homeassistant.yml
@@ -1,10 +1,10 @@
 ---
 services:
   homeassistant:
-    container_name: homeassistant
+    container_name: {{ stack_name }}
     image: "ghcr.io/home-assistant/home-assistant:latest"
     volumes:
-      - /container_data/homeassistant/config:/config
+      - /{{ container_data }}/homeassistant/config:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     ports:
