--- a/run.yml
+++ b/run.yml
@@ -14,6 +14,7 @@
 
     - role: portainer
 
-    - role: pihole_prepare
+    - role: homeassistant_stack
+    - role: pihole_stack
+    - role: mosquitto_stack
 
-    - role: portainer_stacks
