--- a/group_vars/all/secrets.yml.example
+++ b/group_vars/all/secrets.yml.example
@@ -5,3 +5,5 @@ host_user: host_user
 portainer_admin_user: admin
 portainer_admin_pass: admin-pass
 portainer_endpoint_id: 2
+
+immich_db_password: immich-db-password
