split up upload and external library location

--- a/roles/system_prepare/tasks/main.yml
+++ b/roles/system_prepare/tasks/main.yml
@@ -40,10 +40,27 @@
     group: "{{ host_user }}"
     mode: "0755"
 
-- name: Mount NFS share with fail-safe options
+- name: "Ensure immich mount point exists"
+  ansible.builtin.file:
+    path: "/mnt/diskstation/immich"
+    state: directory
+    owner: "{{ host_user }}"
+    group: "{{ host_user }}"
+    mode: "0755"
+
+- name: Mount NFS diskstation photos folder
   ansible.posix.mount:
     path: /mnt/diskstation/photos
     src: "diskstation:/volume1/photo"
+    fstype: nfs
+    opts: "defaults,vers=3,nofail,soft,timeo=5,retry=1,bg"
+    state: mounted
+  become: yes
+
+- name: Mount NFS diskstation immich folder
+  ansible.posix.mount:
+    path: /mnt/diskstation/immich
+    src: "diskstation:/volume1/immich"
     fstype: nfs
     opts: "defaults,vers=3,nofail,soft,timeo=5,retry=1,bg"
     state: mounted
