--- a/group_vars/all/common.yml
+++ b/group_vars/all/common.yml
@@ -1,3 +1,3 @@
 ---
 container_data: container_data
-portainer_api_url: "http://{{ ansible_default_ipv4.address }}:9000"
+portainer_api_url: "http://localhost:9000"
